Update FineRepository.java